<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PoofAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_reg_customer">Customer Register</string>
    <string name="title_activity_reg_shop">RegShop</string>


    <string name="dialog_title_account_type">Select Account Type </string>

    <!--
      Hint acty_reg_client.xml
    -->
    <string name="reg_client_username"> Username</string>
    <string name="reg_client_name"> Name</string>
    <string name="reg_client_lastname"> Lastname</string>
    <string name="reg_client_bithdate"> Birthdate </string>
    <string name="reg_client_male"> Male </string>
    <string name="reg_client_female"> Female </string>
    <string name="reg_client_pass"> Password </string>
    <string name="reg_client_repeat_pass"> Repeat password </string>


    <!--
     Hint acty_reg_shop.xml
   -->
    <string name="reg_shop_name"> Comercial Name</string>
    <string name="reg_shop_nit"> Category </string>
    <string name="reg_shop_mail"> Mail </string>
    <string name="reg_shop_pass"> Password </string>
    <string name="reg_shop_repeat_pass"> Repeat password </string>
    <string name="reg_shop_goods"> Goods </string>
    <string name="reg_shop_services"> Services </string>
    <string name="reg_shop_phone"> Phone </string>

</resources>
