<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dev.iliuminate.poofandroid.RegClient">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtUserName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/reg_client_username"
                android:layout_marginTop="3dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtName"
                android:layout_gravity="center_horizontal"
                android:hint="@string/reg_client_name"
                android:layout_marginTop="3dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtLastName"
                android:hint="@string/reg_client_lastname"
                android:layout_marginTop="3dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtPass1"
                android:layout_gravity="center_horizontal"
                android:hint="@string/reg_client_pass"
                android:layout_marginTop="3dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtPass2"
                android:layout_gravity="center_horizontal"
                android:hint="@string/reg_client_repeat_pass"
                android:layout_marginTop="3dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_client_male"
                    android:id="@+id/rdMale"
                    android:checked="false"
                    android:layout_marginRight="12dp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_client_female"
                    android:id="@+id/rdFemale"
                    android:checked="false"
                    android:layout_marginLeft="12dp" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/edtBirthdate"
                android:hint="@string/reg_client_bithdate"
                android:enabled="true"
                android:layout_marginTop="3dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnDone"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher"
                android:layout_marginTop="23dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
