<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dev.iliuminate.poofandroid.RegShop">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtRegShopName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/reg_shop_name"
        android:layout_marginTop="3dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/edtRegShopNUIP"
        android:layout_below="@+id/edtRegShopName"
        android:layout_centerHorizontal="true"
        android:hint="@string/reg_shop_nit"
        android:layout_marginTop="3dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edtRegShopMail"
        android:layout_below="@+id/edtRegShopNUIP"
        android:layout_centerHorizontal="true"
        android:hint="@string/reg_shop_mail"
        android:layout_marginTop="3dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtRegShopPass1"
        android:layout_below="@+id/edtRegShopMail"
        android:layout_centerHorizontal="true"
        android:hint="@string/reg_shop_pass"
        android:layout_marginTop="3dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtRegShopPass2"
        android:layout_below="@+id/edtRegShopPass1"
        android:layout_centerHorizontal="true"
        android:hint="@string/reg_shop_repeat_pass"
        android:layout_marginTop="3dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegShopImg"
        android:src="@drawable/ic_launcher"
        android:layout_below="@+id/edtPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerShop"
        android:layout_below="@+id/edtRegShopPass2"
        android:layout_alignRight="@+id/edtRegShopPass2"
        android:layout_alignEnd="@+id/edtRegShopPass2"
        android:layout_alignLeft="@+id/edtRegShopPass2"
        android:layout_alignStart="@+id/edtRegShopPass2"
        android:layout_marginTop="3dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edtPhone"
        android:layout_below="@+id/spinnerShop"
        android:layout_alignLeft="@+id/spinnerShop"
        android:layout_alignStart="@+id/spinnerShop"
        android:hint="@string/reg_shop_phone" />

</RelativeLayout>
